# lazy_factory

./: .coveragerc  .flake8  LICENSE  README.md  pyproject.toml  pytest.ini  requirements_dev.txt
.github/workflows/: python-package.yml
src/lazy_factory/: __init__.py  factory.py
tests/: test_factory.py
